--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.7.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.5.5",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1"
